--- a/Web.AdvertisementApp/Web.AdvertisementApp.UI/Views/Home/HumanResource.cshtml
+++ b/Web.AdvertisementApp/Web.AdvertisementApp.UI/Views/Home/HumanResource.cshtml
@@ -27,7 +27,7 @@
                             else
                             {
                                 <div class="alert alert-light text-center">
-                                    Başvuru yapabilmeniz için kayıt olmanız gerekmektedir. <a href="#">Kayıt 01</a>
+                                    Başvuru yapabilmeniz için kayıt olmanız gerekmektedir. <a href="#">Kayıt Ol</a>
                                 </div>
                             }
                         </div>
