--- a/Web.AdvertisementApp/Web.AdvertisementApp.UI/Views/Shared/_Layout.cshtml
+++ b/Web.AdvertisementApp/Web.AdvertisementApp.UI/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>One Page Wonder - Start Bootstrap Template</title>
+    <title>FBÜ Bilişim Web</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -31,7 +31,9 @@
         </div>
     </nav>
     
+
     @RenderBody()
+
     <!-- Footer-->
     <footer class="py-5 bg-black">
         <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; FBÜ Bilişim 2023</p></div>
