end of project files

--- a/Web.AdvertisementApp/Web.AdvertisementApp.UI/Views/Home/HumanResource.cshtml
+++ b/Web.AdvertisementApp/Web.AdvertisementApp.UI/Views/Home/HumanResource.cshtml
@@ -17,17 +17,17 @@
                 </h2>
                 <div id="collapse-@Model[i].Id" class="accordion-collapse collapse @(i==0? "show":"")" aria-labelledby="heading-@Model[i].Id" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        @Model[i].Description
+                        @Html.Raw(Model[i].Description)
 
                         <div>
                             @if (User.Identity.IsAuthenticated)
                             {
-                                <a href="#">Başvur</a>
+                                <a asp-controller="Advertisement" asp-action="Send" asp-route-advertisementId="@Model[i].Id">Başvur</a>
                             }
                             else
                             {
                                 <div class="alert alert-light text-center">
-                                    Başvuru yapabilmeniz için kayıt olmanız gerekmektedir. <a href="#">Kayıt Ol</a>
+                                    Başvuru yapabilmeniz için giriş yapmanız gerekmektedir. <a asp-action="SignIn" asp-controller="Account">Giriş Yap</a>
                                 </div>
                             }
                         </div>
