--- a/Web.AdvertisementApp/Web.AdvertisementApp.UI/Views/Home/Index.cshtml
+++ b/Web.AdvertisementApp/Web.AdvertisementApp.UI/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 </header>
 
 @for (int i = 0; i < Model?.Count; i++)
- {
+{
 
     <section id="scroll">
         <div class="container px-5">
@@ -38,7 +38,10 @@
             </div>
         </div>
     </section>
- }
-
+}
+<!-- Footer-->
+<footer class="py-5 bg-black">
+    <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Fbü Bilişim 2021</p></div>
+</footer>
 
 
