--- a/Web.AdvertisementApp/Web.AdvertisementApp.UI/Views/_ViewImports.cshtml
+++ b/Web.AdvertisementApp/Web.AdvertisementApp.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 @using Web.AdvertisementApp.Dtos
 @using Web.AdvertisementApp.UI.Models
+@using Web.AdvertisementApp.Common.Enums 
